--- a/frontend/app/components/recipes-card.hbs
+++ b/frontend/app/components/recipes-card.hbs
@@ -1,10 +1,7 @@
 <h2>This week's meals</h2>
 <ul>
   {{#each @recipes as |recipe|}}
-    <input type="checkbox" value={{recipe.completed}}>
-    <li>{{recipe.name}}</li>
-    <a href={{concat 'https://' recipe.link}} target='_blank'>See recipe</a>
-    <span>Type = {{recipe.mealType}}</span>
+    <Recipe @recipe={{recipe}} />
   {{/each}}
 </ul>
 
